<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright 2012 the original author or authors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources>

    <!--
    Space between Cloud and Foundry is needed to have 
    Cloud/Foundry instead of CloudFoundr/y on launch screen
    -->
    <string name="app_name">Cloud Foundry</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="target">Choose target&#8230;</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="db_apps_text">Apps</string>
    <string name="db_services_text">Services</string>
    <string name="db_info_text">Info</string>
    <string name="db_about_text">About</string>
    <string name="cloud_info_name">Name</string>
    <string name="cloud_info_version">Version</string>
    <string name="cloud_info_build">Build</string>
    <string name="cloud_info_description">Description</string>
    <string name="cloud_info_quota_apps">Apps</string>
    <string name="cloud_info_quota_mem">Memory</string>
    <string name="cloud_info_quota_uris">URIs per app</string>
    <string name="cloud_info_quota_services">Services</string>
    <string name="cloud_info_user">Logged in as</string>
    <string name="manage">&lt;u&gt;manage&lt;/u&gt;</string>
    <string name="ci_basic_title">Info</string>
    <string name="services">Services</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit_target_dialog_title">Specify target</string>
    <string name="label_hint">Enter a label here</string>
    <string name="url_hint">Controller URL</string>
    <string name="done">Done</string>
    <string name="cloudfoundry">CloudFoundry</string>
    <string name="control">Control</string>
    <string name="cloud_apply">Save changes</string>
    <string name="start">Start</string>
    <string name="loading">Loading…</string>
    <string name="stop">Stop</string>
    <string name="working">Working…</string>
    <string name="instances">Instances</string>
    <string name="not_available_abbr">NA</string>
    <string name="header_cpu">CPU (Cores)</string>
    <string name="header_memory">Memory (limit)</string>
    <string name="header_disk">Disk (limit)</string>
    <string name="header_uptime">Uptime</string>
    <string name="application_info">Details</string>
    <string name="frameworks">Frameworks</string>
    <string name="runtimes">Runtimes</string>
    <string name="empty_selection">Select an Item on le left</string>
    <string name="control_status">Status</string>
    <string name="control_app_resources">App resources</string>
    <string name="control_instances">Instances</string>
    <string name="control_memory_per_instance">Memory (per instance)</string>
    <string name="control_global_memory">Global memory</string>
    <string name="error_title">An error occurred</string>
    <string name="edit_service_dialog_title">Add a new service</string>
    <string name="add_service_name_hint">Choose a service name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="service_configurations">Services</string>
    
    <plurals name="number_of_apps">
        <item quantity="one">1 application</item>
        <item quantity="other">%d applications</item>
    </plurals>
    <string name="signup_text">No CloudFoundry account yet? <a href="https://my.cloudfoundry.com/signup?promo=androidapp">Signup here</a></string>


</resources>