<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_name" />

        <TextView
            android:id="@+id/cloud_info_name"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_version" />

        <TextView
            android:id="@+id/cloud_info_version"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_build" />

        <TextView
            android:id="@+id/cloud_info_build"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_description" />

        <TextView
            android:id="@+id/cloud_info_description"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_user" />

        <TextView
            android:id="@+id/cloud_info_user"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_quota_apps" />

        <TextView
            android:id="@+id/cloud_info_quota_apps"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_quota_mem" />

        <TextView
            android:id="@+id/cloud_info_quota_mem"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_quota_uris" />

        <TextView
            android:id="@+id/cloud_info_quota_uris"
            style="@style/InfoSecondary" />

        <TextView
            style="@style/InfoPrimary"
            android:text="@string/cloud_info_quota_services" />

        <TextView
            android:id="@+id/cloud_info_quota_services"
            style="@style/InfoSecondary" />
    </LinearLayout>

</ScrollView>