<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.iosched.ui.widget.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity" >

    <TextView
        android:id="@+id/db_apps_btn"
        style="@style/DashboardButton"
        android:text="@string/db_apps_text" />

    <TextView
        android:id="@+id/db_services_btn"
        style="@style/DashboardButton"
        android:text="@string/db_services_text" />

    <TextView
        android:id="@+id/db_info_btn"
        style="@style/DashboardButton"
        android:text="@string/db_info_text" />

    <TextView
        android:id="@+id/db_other_btn"
        style="@style/DashboardButton"
        android:text="@string/db_about_text" />

</com.google.android.apps.iosched.ui.widget.DashboardLayout>