<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_cpu"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_memory"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/disk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_disk"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/uptime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_uptime"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>